--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.2.0",
     "react-slick": "^0.31.0",
     "remixicon": "^4.6.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
